# research-agent-v2

./: .env.example  .gitignore  LAB_NOTEBOOK.md  README.md  RESEARCH.md  TASK.md  dashboard.py  main.py  parallel.py  pyproject.toml  replay.py  sweep.py
a/: config.py  edit_tool.py  orchestrator.py  patcher.py  prompts.py  schemas.py
agent/: __init__.py  analytics.py  archive.py  clearml_utils.py  config.py  editor.py  git_manager.py  llm.py  logs_manager.py  orchestrator.py  proposers.py  schemas.py  tracker.py
dashboard/: README.md
dashboard/backend/: app.py
dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/frontend/src/: App.tsx  api.ts  charts.tsx  styles.css  types.ts  views.tsx
docs/: LAB_NOTEBOOK.md  RESEARCH.md
history/: experiments.jsonl  sessions.jsonl
model_dir/: .gitignore  config.yaml  data.py  loss.py  model.py  optimizer.py  pyproject.toml  run.py  transforms.py  wiki.md
tests/: test_editor.py  test_loop.py
